--- a/S1/index.html
+++ b/S1/index.html
@@ -398,7 +398,8 @@
 }
 </style></head>
 <body>
-    <h1>向日葵正在生长...(๑´ㅂ`๑)<br><small>请注意内存哦，会无限生长(・×・´)</small></h1>
+    <button onclick="water()">浇水</button>
+    <h1>向日葵正在生长...(๑´ㅂ`๑)
     <div class="sunflwr">
         <div class="sunflwr__leaf--left"></div>
         <div class="sunflwr__leaf--right"></div>
